# guardrails-GLiNER2-lora

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/: __init__.py
src/finetuner/: config.py  constants.py  eval.py  train.py
src/finetuner/core/: __init__.py  device.py  inference.py  metrics.py  model.py  tracker.py  trainer.py
src/finetuner/data/: dataset.py  prepare_data.py
src/streamlit_app/: app.py
src/streamlit_app/api/: client.py
src/streamlit_app/components/: config_panel.py  evaluator.py  training_monitor.py
src/streamlit_app/styles/: loader.py  main.css
tests/: test_code_smell.py  test_dataset.py  test_device.py  test_evaluator.py  test_factory.py  test_trainer.py  test_training_monitor.py
